@startuml
'https://plantuml.com/class-diagram

Abstract class AbstractAircraft{
 + crash(AbstractFlyingObject flyingObject):boolean
    + setLocation(double locationX, double locationY):void
    + getLocationX():int
    + getLocationY():int
    + getSpeedY():int
    + getImage():BufferedImage
    + getWidth():int
    + getHeight():int
    + notValid():boolean
    + vanish():void

}
Interface EnemyCreator{
+ createEnemy(int LocationX , int LocationY , int speedX , int speedY , int hp):AbstractAircraft

}
class MobEnemy
class EliteEnemy
class AdvancedEnemy
class HeroEnemy
class BossEnemy

class MobEnemyCreator{
+ createEnemy(int LocationX , int LocationY , int speedX , int speedY , int hp):Enemy
}
class EliteEnemyCreator{
+ createEnemy(int LocationX , int LocationY , int speedX , int speedY , int hp):Enemy
}
class AdvancedEnemyCreator{
+ createEnemy(int LocationX , int LocationY , int speedX , int speedY , int hp):Enemy
}
class HeroEnemyCreator{
+ createEnemy(int LocationX , int LocationY , int speedX , int speedY , int hp):Enemy
}
class BossEnemyCreator{
+ createEnemy(int LocationX , int LocationY , int speedX , int speedY , int hp):Enemy
}

note bottom of EliteEnemyCreator : return new EliteEnemy(int LocationX , int LocationY , int speedX , int speedY , int hp)

EnemyCreator ..> AbstractAircraft
MobEnemy ..|> AbstractAircraft
EliteEnemy ..|> AbstractAircraft
AdvancedEnemy ..|> AbstractAircraft
HeroEnemy ..|> AbstractAircraft
BossEnemy ..|> AbstractAircraft

MobEnemyCreator --|> EnemyCreator
EliteEnemyCreator --|> EnemyCreator
AdvancedEnemyCreator --|> EnemyCreator
HeroEnemyCreator --|> EnemyCreator
BossEnemyCreator --|> EnemyCreator

MobEnemyCreator ..> MobEnemy : <<create>>
EliteEnemyCreator ..> EliteEnemy : <<create>>
AdvancedEnemyCreator ..> AdvancedEnemy : <<create>>
HeroEnemyCreator ..> HeroEnemy : <<create>>
BossEnemyCreator ..> BossEnemy : <<create>>


@enduml